package com.betanzos.escuelait.mastermind.views;

public interface GoodbyeView {

    void show();
}
