package com.betanzos.escuelait.mastermind.views;

public interface ResumeView {

    boolean interact();
}
