package com.betanzos.escuelait.mastermind.views.graphic;

import com.betanzos.escuelait.mastermind.views.GoodbyeView;

public final class GraphicGoodbyeView implements GoodbyeView {

    @Override
    public void show() {

    }
}
