package com.betanzos.escuelait.mastermind.views.graphic;

import com.betanzos.escuelait.mastermind.views.ResumeView;

public final class GraphicResumeView implements ResumeView {

    @Override
    public boolean interact() {
        return false;
    }
}
